# optprompt

./: .flake8  .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: checks.yml  pr.yml
examples/: example.py  example.toml
optprompt/: __init__.py  optprompt.py
packaging/: optprompt.spec
tests/: test_optprompt.py
