[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "optprompt"
authors = [
  { name="Dylan Stephano-Shachter", email="dylan@theone.ninja" }
]
description = "A prompting option parser"
readme = "README.md"
requires-python = ">=3.2"  # Required for callable()
classifiers = [
  "Programming Language :: Python",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Development Status :: 4 - Beta",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/dstathis/optprompt"
issues = "https://github.com/dstathis/optprompt/issues"

[tool.hatch.version]
path = "optprompt/__init__.py"
